# eiq_simpleclient_demo

./: README.md  requirements.txt  setup.cfg  setup.py
src/eiq_simpleclient/: __init__.py
