[metadata]
name = ic-api-simple-client
version = 0.1.0
author = EclecticIQ B.V.
author_email = zed@eclecticiq.com
description =
  Simple Python REST API client for the
  EclecticIQ Intelligence Center.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zed-eiq/ic-api-simple-client
project_urls =
  Bug Tracker = https://github.com/zed-eiq/ic-api-simple-client/issues
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: Apache 2.0 License
  Private :: Do Not Upload

[options]
package_dir =
  = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
